--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
     </header>
     <div id="form-container">
       <div class="form-group">
-        <label for="card">Kartennummer</label>
+        <label for="card">Bitte scanne deine Karte!</label>
         <input type="text" id="card" required>
       </div>
       <button class="btn-submit" onclick="fetchCardData()">Kontostand prüfen</button>
